[package]

name = "nickel"
version = "0.8.1"
authors = [ "Christoph Burgdorf <christoph@thoughtram.io>",
            "Kevin Butler <haqkrs@gmail.com>",
            "Simon Persson <simon@flaskpost.org>" ]
description = "An express.js inspired web framework"
license = "MIT"

repository = "https://github.com/nickel-org/nickel.rs"
readme = "README.md"
keywords = ["nickel", "server", "web", "express"]

[features]
unstable = ["hyper/nightly", "compiletest_rs"]
ssl = ["hyper/ssl"]

[dependencies]
url = "1.0"
time = "0.1"
typemap = "0.3"
plugin = "0.2"
regex = "0.1"
rustc-serialize = "0.3"
log = "0.3"
groupable = "0.2"
mustache = "0.6"
lazy_static = "0.1"
modifier = "0.1"

[dependencies.hyper]
version = "0.9.6"
default-features = false

[dependencies.compiletest_rs]
version = "0.1"
optional = true

[[example]]

name = "logger_middleware"
path = "examples/logger_middleware.rs"

[[example]]

name = "routing"
path = "examples/routing.rs"

[[example]]

name = "enable_cors"
path = "examples/enable_cors.rs"

[[example]]

name = "template"
path = "examples/template.rs"

[[example]]

name = "macro_example"
path = "examples/macro_example.rs"

[[example]]

name = "hello_world"
path = "examples/hello_world.rs"

[[example]]

name = "hello_world_macro"
path = "examples/hello_world_macro.rs"

[[example]]

name = "json"
path = "examples/json.rs"

[[example]]

name = "custom_error_handler"
path = "examples/custom_error_handler.rs"

[[example]]

name = "moved_ownership"
path = "examples/moved_ownership.rs"

[[example]]

name = "route_data"
path = "examples/route_data.rs"

[[example]]

name = "static_files"
path = "examples/static_files.rs"

[[example]]

name = "regex_route"
path = "examples/regex_route.rs"

[[example]]

name = "query_string"
path = "examples/query_string.rs"

[[example]]

name = "mount"
path = "examples/mount.rs"

[[example]]

name = "chaining"
path = "examples/chaining.rs"

[[example]]

name = "form_data"
path = "examples/form_data/form_data.rs"

[[example]]

name = "https"
path = "examples/https.rs"
