[package]
name = "nickel_macros"
version = "0.1.0"
authors = [ "christoph@thoughtram.io" ]
repository = "https://github.com/nickel-org/nickel.rs"
readme = "../README.md"
keywords = ["nickel", "web server"]
license = "MIT"
description = "Macros for nickel.rs"


[lib]
name = "nickel_macros"
path = "src/macro.rs"
plugin = true
